Fix bug causing <pre> to shift on smaller displays

--- a/frontend/Weather-project/src/index.css
+++ b/frontend/Weather-project/src/index.css
@@ -58,7 +58,7 @@ html, body{
   font-style: normal;
   font-size: 2rem;
   margin-bottom: -2rem;
-  position: fixed;
+  position: absolute;
 }
 
 .CityName{
